feat!: remove invite-code api
BREAKING: Remove the API to add invite-codes. Keep `/invite/verify` to
          allow querying the `room_id` for invite codes. The frontend
          does allow to join a room using only the invite code.

closes #1459
